######################################################################
Revision history for Perl extension Bot::WootOff

0.07  (not yet released)
    (ms) If the scraper fails, it now logs the HTML to /tmp/woot.html.
    (ms) Since woot.com often suffers brief outages during a wootoff,
         http_max_retries now sets 30 HTTP fetches of HTML we can't 
         parse before we give up.

0.06  2009/09/24
    (ms) Added LIVE_TESTS and eg/woot-scraper to detect woot.com 
         HTML changes early.
    (ms) Added "!woot" command to give channel participants the 
         opportunity to have the bot repeat its last message.

0.05  2009/09/03
    (ms) Fixed eg/wootbot parameter parsing
    (ms) Fixed 'uninitialized' warning in WootOff.pm

0.04  2009/09/03
    (ms) Adapted woot scraper, thanks to Noel Rosenberg for the 
         heads-up.

0.03  2009/07/22
    (ms) Removed said() method to prevent bot from responding to 
         messages in the channel.

0.02  2009/05/15
    (ms) Added documentation on eg/wootoff.
    (ms) Added pseudo subclass Bot::Woot to help the CPAN search engine.

0.01  2009/05/13
    (ms) Where it all began.